--- a/GameOfLife/GameOfLife.vcxproj
+++ b/GameOfLife/GameOfLife.vcxproj
@@ -116,6 +116,7 @@
   <ItemGroup>
     <ClCompile Include="Cell.cpp" />
     <ClCompile Include="GameOfLife.cpp" />
+    <ClCompile Include="Tester.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
