--- a/GameOfLife/GameOfLife.vcxproj
+++ b/GameOfLife/GameOfLife.vcxproj
@@ -112,10 +112,12 @@
   <ItemGroup>
     <ClInclude Include="Cell.h" />
     <ClInclude Include="Life.h" />
+    <ClInclude Include="Seeder.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cell.cpp" />
     <ClCompile Include="Life.cpp" />
+    <ClCompile Include="Seeder.cpp" />
     <ClCompile Include="Tester.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
