Change Seeder to Seed, change Life to use Seed objects instead of bool**, so we can be sure we're hadling dynamic memory safely.

--- a/GameOfLife/GameOfLife.vcxproj
+++ b/GameOfLife/GameOfLife.vcxproj
@@ -112,12 +112,12 @@
   <ItemGroup>
     <ClInclude Include="Cell.h" />
     <ClInclude Include="Life.h" />
-    <ClInclude Include="Seeder.h" />
+    <ClInclude Include="Seed.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cell.cpp" />
     <ClCompile Include="Life.cpp" />
-    <ClCompile Include="Seeder.cpp" />
+    <ClCompile Include="Seed.cpp" />
     <ClCompile Include="Tester.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
