--- a/GameOfLife/GameOfLife.vcxproj.filters
+++ b/GameOfLife/GameOfLife.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Seed.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FileIOException.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cell.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Seed.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FileIOException.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
